--- a/src/scss/layout/_proyectos.scss
+++ b/src/scss/layout/_proyectos.scss
@@ -54,7 +54,10 @@
                     text-align: center;
                     font-family: 'Poppins', sans-serif;
                     font-weight: bold;
-                    width: 50%;
+                    @include telefono{
+                        width: 50%; 
+                    }
+                    width: 90%;
                     margin: 20px auto;
                     transition: all .6s ease;
                     &:hover{
